Message textoverflow bug fix

--- a/client/src/shared/components/messages/message-card/message-card.component.scss
+++ b/client/src/shared/components/messages/message-card/message-card.component.scss
@@ -1,1 +1,6 @@
 
+.message{
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: clip;
+}
